--- a/trunk/TabletopServer/.classpath
+++ b/trunk/TabletopServer/.classpath
@@ -2,11 +2,59 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="jar/alljoyn.jar">
+	<classpathentry kind="lib" path="/home/frans/Desktop/alljoyn/build/linux/x86/debug/dist/java/jar/alljoyn.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/home/frans/Desktop/eclipse-workspace/TabletopServer/docs/"/>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="TabletopServer/lib"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/frans/Desktop/alljoyn/build/linux/x86/debug/dist/java/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-anim.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-awt-util.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-bridge.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-css.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-dom.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-ext.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-extension.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-gvt.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-parser.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-script.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-svg-dom.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-svggen.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-transcoder.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-util.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-xml.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/js.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/pdf-transcoder.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/xml-apis-ext.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/xml-apis.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/gsvideo/gstreamer-java-bin-1.2.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/gsvideo/gsvideo06pre.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/gsvideo/jna-3.1.0.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/gluegen-rt-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/gluegen-rt-natives-linux-i586.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/gluegen-rt-natives-macosx-ppc.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/gluegen-rt-natives-macosx-universal.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/gluegen-rt-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/gluegen-rt-natives-windows-i586.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/jogl-natives-linux-amd64.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/jogl-natives-linux-i586.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/jogl-natives-macosx-ppc.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/jogl-natives-macosx-universal.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/jogl-natives-windows-amd64.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/jogl-natives-windows-i586.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/jogl.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/jogl/opengl.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/tuio/libTUIO.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/whirlylib/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/whirlylib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/whirlylib/concurrent-1.3.4.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/whirlylib/junit-3.8.1.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/whirlylib/log4j-1.2.8.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/whirlylib/whirlycache-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/core.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/GlulogicMT.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/mri.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/mt4j.jar"/>
+	<classpathentry kind="lib" path="/MT4j/mt4jLibs/muito_blobtracking.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
