--- a/trunk/TabletopServer/.classpath
+++ b/trunk/TabletopServer/.classpath
@@ -2,11 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/home/frans/Desktop/alljoyn/build/linux/x86/debug/dist/java/jar/alljoyn.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/frans/Desktop/alljoyn/build/linux/x86/debug/dist/java/lib"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-anim.jar"/>
 	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-awt-util.jar"/>
 	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-bridge.jar"/>
@@ -56,5 +51,10 @@
 	<classpathentry kind="lib" path="/MT4j/mt4jLibs/mri.jar"/>
 	<classpathentry kind="lib" path="/MT4j/mt4jLibs/mt4j.jar"/>
 	<classpathentry kind="lib" path="/MT4j/mt4jLibs/muito_blobtracking.jar"/>
+	<classpathentry kind="lib" path="jar/alljoyn.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="TabletopServer/lib"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
