--- a/trunk/SimpleServiceExample/.classpath
+++ b/trunk/SimpleServiceExample/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/home/frans/Desktop/alljoyn/build/linux/x86/debug/dist/java/jar/alljoyn.jar">
+	<classpathentry kind="lib" path="lib/alljoyn.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/frans/Desktop/alljoyn/build/linux/x86/debug/dist/java/lib"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="SimpleServiceExample/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
