--- a/trunk/SimpleServiceExample/.project
+++ b/trunk/SimpleServiceExample/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SimpleServiceExample</name>
+	<name>SimpleTabletopServiceExample</name>
 	<comment></comment>
 	<projects>
 	</projects>
