--- a/trunk/TabletopServer/.classpath
+++ b/trunk/TabletopServer/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="jar/alljoyn.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="TabletopServer/jar"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/home/frans/Desktop/alljoyn/alljoyn_java/build/linux/x86/debug/obj/jni"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-anim.jar"/>
