--- a/trunk/CFServer/.classpath
+++ b/trunk/CFServer/.classpath
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="jar/alljoyn.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="CFServerExtras/jar"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="CFServer/jar"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/MT4j/mt4jLibs/batik/batik-anim.jar"/>
@@ -54,5 +53,7 @@
 	<classpathentry kind="lib" path="/MT4j/mt4jLibs/muito_blobtracking.jar"/>
 	<classpathentry kind="src" path="/MT4j"/>
 	<classpathentry kind="lib" path="jar/gifAnimation.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-7-openjdk-i386"/>
+	<classpathentry kind="lib" path="/home/frans/Desktop/JLayer1.0.1/jl1.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
