--- a/trunk/CFClientNew/project.properties
+++ b/trunk/CFClientNew/project.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=android-10
-android.library.reference.1=../../../../Downloads/facebook-facebook-android-sdk-4cbe4e2/facebook
+android.library.reference.1=../Facebook SDK
